# labyc

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  _codeql_detected_source_root  run-clang-tidy-all.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ISPD2008-NTHU-R-CodeRelease-Updated/: .cproject  .project
ISPD2008-NTHU-R-CodeRelease-Updated/src/router/: Congestion.cpp  Construct_2d_tree.cpp  MM_mazeroute.cpp  MM_mazeroute.h  Main.cpp  OutputGeneration.cpp  OutputGeneration.h  Post_processing.cpp  Range_router.cpp  Route.cpp  Route.h
LabyNodeJS/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
LabyNodeJS/examples/: basic.ts  defaut.ts  hqnoise-streamline.ts
LabyNodeJS/src/: cache.ts  context.ts  gallery.ts  hash.ts  index.ts  logging.ts  payload.ts  runner.ts  stages.ts  types.ts
LabyNodeJS/tests/: cache.test.ts  context.test.ts  fixtures.ts  gallery.test.ts  hash.test.ts  payload.test.ts  real-binary.test.ts  runner.test.ts  stages.test.ts
LabyPath/: .clang-format  .clang-tidy  .cproject  .project  CMakeLists.txt  config.json  config.txt  llvm_cproject  warningList.json
LabyPath/API/: AllConfig.proto
LabyPath/_build/: CTestTestfile.cmake  Makefile  cmake_install.cmake  labypath_tests[1]_include.cmake  labypath_tests[1]_tests.cmake
LabyPath/_codeql_build_dir/: CTestTestfile.cmake  Makefile  cmake_install.cmake  labypath_tests[1]_include.cmake
LabyPath/include/rapidxml_ns/: rapidxml_ns.hpp
LabyPath/include/svgpp/: document_traversal.hpp
LabyPath/include/svgpp/adapter/: path_markers.hpp
LabyPath/include/svgpp/detail/: names_dictionary.hpp
LabyPath/include/svgpp/parser/: length.hpp  percentage_or_length.hpp  transform_list.hpp
LabyPath/include/svgpp/policy/: error.hpp
LabyPath/input/: 591.eps  config.json
LabyPath/src/: GeomData.cpp  GeomData.h  GeomFeatures.h  GridIndex.cpp  GridIndex.h  Main.cpp  MessageIO.cpp  MessageIO.h  OrientedRibbon.cpp  OrientedRibbon.h  PolyConvex.cpp  PolyConvex.h  PolyVertex.h  PolyVertexList.cpp  Polyline.cpp  Polyline.h  Ribbon.cpp  Ribbon.h  SVGShapeToGrid.cpp  SVGShapeToGrid.h  SegmentPS.cpp  SegmentPS.h  SkeletonGrid.cpp  SkeletonGrid.h  SkeletonOffset.cpp  SkeletonOffset.h  SkeletonRadial.cpp  SkeletonRadial.h  Smoothing.cpp  Smoothing.h  VoronoiMedialSkeleton.cpp  VoronoiMedialSkeleton.h
LabyPath/src/AlternaRoute/: AlternateRoute.cpp  AlternateRoute.h  StrokeArrangement.cpp  StrokeArrangement.h
LabyPath/src/Anisotrop/: Cell.cpp  Cell.h  Net.cpp  Net.h  Placement.cpp  Placement.h  QueueCost.cpp  QueueCost.h  QueueElement.cpp  QueueElement.h  Routing.cpp  Routing.h  SpatialIndex.cpp  SpatialIndex.h
LabyPath/src/Rendering/: GraphicRendering.cpp  GraphicRendering.h  PenStroke.cpp  PenStroke.h
LabyPath/src/SVGParser/: Common.cpp  Common.h  Context.cpp  Context.h  Loader.cpp  Loader.h  ShapeContext.cpp  ShapeContext.h  Stylable.cpp  Stylable.h  UseContext.cpp  UseContext.h
LabyPath/src/SVGWriter/: DocumentSVG.cpp  DocumentSVG.h
LabyPath/src/agg/: agg_arc.cpp  agg_arc.h  agg_curve.cpp  agg_curves.h
LabyPath/src/basic/: AugmentedPolygonSet.cpp  AugmentedPolygonSet.h  CircleIntersection.cpp  CircleIntersection.h  Color.cpp  Color.h  EasyProfilerCompat.h  KernelConverter.h  LinearGradient.cpp  LinearGradient.h  NumericRange.cpp  NumericRange.h  PairInteger.cpp  PairInteger.h  PolygonTools.cpp  PolygonTools.h  ProfileActivate.cpp  ProfileActivate.h  RandomInteger.cpp  RandomInteger.h  RandomUniDist.cpp  RandomUniDist.h  RangeHelper.cpp  RangeHelper.h  SimplifyLines.cpp  SimplifyLines.h
LabyPath/src/fft/: Array.h  fftw++.cc  fftw++.h
LabyPath/src/flatteningOverlap/: Family.cpp  Family.h  Node.cpp  Node.h  NodeRendering.cpp  NodeRendering.h  PathRendering.cpp  PathRendering.h  README.md  VISUAL_EXAMPLES.md
LabyPath/src/generator/: ComplexField2D.cpp  ComplexField2D.h  FftwArray.h  HqNoise.cpp  HqNoise.h  HqNoise2DSampler.cpp  HqNoise2DSampler.h  PoissonGenerator.h  StreamLine.cpp  StreamLine.h
LabyPath/src/protoc/: AllConfig.pb.cc  AllConfig.pb.h
LabyPath/src/studies/: ConfigAll.cpp  ConfigAll.h  Delaunay_mesh_vertex_base_with_info_2.h  GlobalRouter.cpp  GlobalRouter.h  Goutte.cpp  Goutte.h  PathRenderingTest.cpp  PathRenderingTest.h  StreamLineTest.cpp  StreamLineTest.h  Triangule.cpp  Triangule.h  astar.cpp  bezier.cpp  ex_triangle.cpp  grayPen.cpp  harmonicOscillo.cpp  noise.proto  print.h
LabyPath/src/test/: BezierTest.cpp  BezierTest.h  GrayPenTest.cpp  GrayPenTest.h  ParseSVG.cpp  ParseSVG.h  PoissonGeneratorTest.cpp  PoissonGeneratorTest.h  PolygonSetTest.cpp  PolygonSetTest.h
LabyPath/tests/: test_basic_streamline.cpp  test_circleintersection.cpp  test_color.cpp  test_documentsvg.cpp  test_edgeinfo.cpp  test_flatteningoverlap.cpp  test_geomdata.cpp  test_graph_coloring.cpp  test_hqnoiseutils.cpp  test_iterators.cpp  test_lineargradient.cpp  test_net.cpp  test_numericrange.cpp  test_orientedribbon.cpp  test_pairinteger.cpp  test_poissongenerator.cpp  test_polyconvex.cpp  test_polygontools.cpp  test_polyline.cpp  test_queuecost.cpp  test_queueelement.cpp  test_randominteger.cpp  test_randomunidist.cpp  test_ribbon.cpp  test_segmentps.cpp  test_simplifylines.cpp  test_smoke_svg.cpp  test_smoothing.cpp  test_vertexinfo.cpp
LabyPython/: .project  .pydevproject  MazeCreator.ui  Pipfile  pyproject.toml  requirements.txt  runDesigner.sh  runProto.sh
LabyPython/src/LabyPython/: AllConfig_pb2.py  App.py  mazeCreator.py  watchAndLaunch.py
LabyPython/tests/: test_gui_imports.py  test_protobuf_config.py  test_watcher.py
LabyStudio/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
LabyStudio/apps/server/: package.json  tsconfig.json
LabyStudio/apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
LabyStudio/apps/web/src/: App.tsx  (+2 more)
LabyStudio/scripts/: dev.sh
docs/: README.md  configuration-and-workflows.md  field-generators-and-noise.md  labynodejs-config-and-cache.md  pipeline-and-algorithms.md  protobuf-to-labystudio-mapping.md  repo-architecture.md
(+35 files in other folders)
